--- a/grapher/text/MarkdownTextWrap.scss
+++ b/grapher/text/MarkdownTextWrap.scss
@@ -3,9 +3,18 @@
     white-space: pre-wrap;
 }
 
-.markdown-text-wrap {
+.GrapherComponent .markdown-text-wrap {
     a,
     a:visited {
-        color: $link-color;
+        color: #666;
+        text-decoration: underline;
+    }
+    a:hover {
+        color: darken(#666, 10%);
+    }
+
+    // needed so DoD border-bottom doesn't clip
+    .markdown-text-wrap__line:last-child {
+        margin-bottom: 2px;
     }
 }
